syntax = "proto3";

option go_package="handworks/common/grpc/payment";
import "booking.proto";

service PaymentService {
  rpc GetQuotation(QuoteRequest) returns (QuoteResponse);
}

message QuoteRequest {
  string cust_id = 1;
  ServicesRequest service = 2;
  repeated AddOnRequest addons = 3;
}

message QuoteResponse {
  repeated AddOnBreakdown addon_breakdown = 1;
  float addon_total = 2;
  float subtotal = 3;
  float total_price = 4;
}
message AddOnBreakdown {
  string addon_id = 1;
  string addon_name = 2;
  float price = 3;
}
